force-app/main/default/objects/Client_Financial_Analysis__c/Client_Financial_Analysis__c.object-meta.xml
<CustomObject>
    <description>Object to capture the Publicly available financial information for the client to be displayed on the Client Plan</description>
    <label>Client Financial Analysis</label>
    <nameField>
        <displayFormat>PFA-{0000}</displayFormat>
        <label>Client Financial Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Financial Analysis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>