force-app/main/default/objects/Client_Financial_Analysis__c/fields/Cash_Flow_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Cash_Flow_Commentary__c</fullName>
    <description>SFP-10747 [c] This field is introduced for CVCA feature to allow printable view of the Client Page similar to the CVCA Template.</description>
    <inlineHelpText>A commentary about the Client’s cash flow, including potential seasonality of cash flows, Creditor and Debtor payment cycles, trade facilities etc.</inlineHelpText>
    <label>Cash Flow Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>