force-app/main/default/objects/Client_Financial_Analysis__c/fields/Cash_from_Operations__c.field-meta.xml
<CustomField>
    <fullName>Cash_from_Operations__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This Field is used to Consume spreadpac information</description>
    <label>Cash from Operations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>