force-app/main/default/objects/Client_Financial_Analysis__c/fields/Cash_on_Hand__c.field-meta.xml
<CustomField>
    <fullName>Cash_on_Hand__c</fullName>
    <description>SFP-11353 [c] - This field is introduced for CVCA feature to allow printable view of the Client Page similar to the CVCA Template.</description>
    <inlineHelpText>The amount of cash the Client has on hand</inlineHelpText>
    <label>Cash on Hand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>