force-app/main/default/objects/Client_Financial_Analysis__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <description>Lookup to the client to create the relationship between Client</description>
    <inlineHelpText>Return on Equity - provide the details as produced by the Client Management Information or TCM teams</inlineHelpText>
    <label>Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Public_Financial_Analysis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>