force-app/main/default/objects/Client_Financial_Analysis__c/fields/Debt_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Debt_Ratio__c</fullName>
    <description>Debt to EBITDA Ratio</description>
    <inlineHelpText>Ratio of total debt to total assets - provide the details as found on the income statement on the Clients published financials</inlineHelpText>
    <label>Debt Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>