force-app/main/default/objects/Client_Financial_Analysis__c/fields/EBITDA__c.field-meta.xml
<CustomField>
    <fullName>EBITDA__c</fullName>
    <description>Earnings before Interest, Taxes, Depreciation and Amortisation.</description>
    <inlineHelpText>Earnings before Interest, Taxes, Depreciation and Amortisation.</inlineHelpText>
    <label>EBITDA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>