force-app/main/default/objects/Client_Financial_Analysis__c/fields/Long_Term_Debt__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Debt__c</fullName>
    <description>SFP-10747 [c] This field is introduced for CVCA feature to allow printable view of the Client Page similar to the CVCA Template.</description>
    <inlineHelpText>The current total long-term debt held by the Client.</inlineHelpText>
    <label>Long-Term Debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>