force-app/main/default/objects/Client_Financial_Analysis__c/fields/Net_profit_for_the_period__c.field-meta.xml
<CustomField>
    <fullName>Net_profit_for_the_period__c</fullName>
    <description>This field maintains a currency for net profit for the period (EN-0928).</description>
    <inlineHelpText>This field maintains a currency for net profit for the period.</inlineHelpText>
    <label>Net Profit for the Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>