force-app/main/default/objects/Client_Financial_Analysis__c/fields/Operating_cashflow__c.field-meta.xml
<CustomField>
    <fullName>Operating_cashflow__c</fullName>
    <description>Operating Cash Flow is a measure of the amount of cash generated by a company&apos;s normal business operations (EN-0928).</description>
    <inlineHelpText>Operating Cash Flow is a measure of the amount of cash generated by a company&apos;s normal business operations.</inlineHelpText>
    <label>Operating Cashflow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>