force-app/main/default/objects/Client_Financial_Analysis__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>Period of time for which this financial data is applicable.</description>
    <inlineHelpText>Period of time for which this financial data is applicable.</inlineHelpText>
    <label>Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Month</fullName>
            </value>
            <value>
                <fullName>3 Month</fullName>
            </value>
            <value>
                <fullName>4 Month</fullName>
            </value>
            <value>
                <fullName>5 Month</fullName>
            </value>
            <value>
                <fullName>6 Month</fullName>
            </value>
            <value>
                <fullName>7 Month</fullName>
            </value>
            <value>
                <fullName>8 Month</fullName>
            </value>
            <value>
                <fullName>9 Month</fullName>
            </value>
            <value>
                <fullName>10 Month</fullName>
            </value>
            <value>
                <fullName>11 Month</fullName>
            </value>
            <value>
                <fullName>12 Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>