force-app/main/default/objects/Client_Financial_Analysis__c/fields/Profit_After_Tax__c.field-meta.xml
<CustomField>
    <fullName>Profit_After_Tax__c</fullName>
    <description>SFP-10747 [c] This field is introduced for CVCA feature to allow printable view of the Client Page similar to the CVCA Template.</description>
    <inlineHelpText>The Client’s profit after tax (Difference between total revenue and total costs).</inlineHelpText>
    <label>Profit After Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>