force-app/main/default/objects/Client_Financial_Analysis__c/fields/Shareholders_Fund__c.field-meta.xml
<CustomField>
    <fullName>Shareholders_Fund__c</fullName>
    <description>SFP-10747 [c] This field is introduced for CVCA feature to allow printable view of the Client Page similar to the CVCA Template.</description>
    <inlineHelpText>This is the owners’ equity in the company</inlineHelpText>
    <label>Shareholders Fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>