force-app/main/default/objects/Client_Financial_Analysis__c/fields/Spreadpac__c.field-meta.xml
<CustomField>
    <fullName>Spreadpac__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spreadpac</label>
    <type>Checkbox</type>
</CustomField>