force-app/main/default/objects/Client_Financial_Analysis__c/fields/Statement_Date__c.field-meta.xml
<CustomField>
    <fullName>Statement_Date__c</fullName>
    <description>Financial Year</description>
    <inlineHelpText>The Statement Date is the date at which the public financial analysis information is published</inlineHelpText>
    <label>Statement Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>