force-app/main/default/objects/Client_Financial_Analysis__c/fields/Statement_Type__c.field-meta.xml
<CustomField>
    <fullName>Statement_Type__c</fullName>
    <description>This Field is created to consume Spreadpac Information</description>
    <label>Statement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>