force-app/main/default/objects/Client_Financial_Analysis__c/fields/Tangible_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Tangible_Net_Worth__c</fullName>
    <description>A measure of the physical worth of a company, which does not include any value derived from intangible assets such as copyrights, patents and intellectual property (EN-0928).</description>
    <inlineHelpText>A measure of the physical worth of a company, which does not include any value derived from intangible assets such as copyrights, patents and intellectual property.</inlineHelpText>
    <label>Tangible Net Worth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>