force-app/main/default/objects/Client_Financial_Analysis__c/fields/Total_assets__c.field-meta.xml
<CustomField>
    <fullName>Total_assets__c</fullName>
    <description>This field maintains all the assets used by a company regardless of how they are financed (EN-0928).</description>
    <inlineHelpText>This field maintains all the assets used by a company regardless of how they are financed.</inlineHelpText>
    <label>Total Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>