force-app/main/default/objects/Client_Financial_Analysis__c/fields/Total_Debt__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt__c</fullName>
    <description>This fields is created to consume Spreadpac information</description>
    <label>Total Debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>