force-app/main/default/objects/Client_Financial_Analysis__c/fields/Total_liabilities__c.field-meta.xml
<CustomField>
    <fullName>Total_liabilities__c</fullName>
    <description>This field maintains total liabilities of Client (EN-0928).</description>
    <inlineHelpText>This field maintains total liabilities of Client.</inlineHelpText>
    <label>Total Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>