force-app/main/default/objects/Client_Financial_Analysis__c/recordTypes/Manually_Captured.recordType-meta.xml
<RecordType>
    <fullName>Manually_Captured</fullName>
    <active>true</active>
    <description>Public financial information captured manually by the user</description>
    <label>Manually Captured</label>
</RecordType>