force-app/main/default/objects/Client_Financial_Analysis__c/recordTypes/Spreadpac_Feed.recordType-meta.xml
<RecordType>
    <fullName>Spreadpac_Feed</fullName>
    <active>true</active>
    <description>Public financial information from Spreadpac</description>
    <label>Spreadpac Feed</label>
</RecordType>