force-app/main/default/objects/Client_Financial_Analysis__c/validationRules/Cannot_edit_Spreadpac_Feed.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_Spreadpac_Feed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName  = &apos;Spreadpac_Feed&apos;,
AND($Profile.Name &lt;&gt; &quot;Business Administrator&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;Api User&quot; ))</errorConditionFormula>
    <errorMessage>Cannot edit public financial analysis published by Spreadpac</errorMessage>
</ValidationRule>