force-app/main/default/objects/Client_Financial_Analysis__c/validationRules/Statement_date_cannot_be_future_year.validationRule-meta.xml
<ValidationRule>
    <fullName>Statement_date_cannot_be_future_year</fullName>
    <active>true</active>
    <errorConditionFormula>Statement_Date__c  &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Statement_Date__c</errorDisplayField>
    <errorMessage>The statement date cannot be in the future, please enter a date on or before today</errorMessage>
</ValidationRule>